# Hybrid_RAG_System_on_Wiki_Indian_History

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: fixed_urls.json  qa_dataset.json  random_urls.json
evaluation/: evaluation_pipeline.py  metrics.py  question_generation.py
notebooks/: exploration.ipynb
reports/: results.csv
src/: data_collection.py  dense_retrieval.py  generation.py  rag_system.py  rrf_fusion.py  sparse_retrieval.py  url_collection.py
tests/: test_rag.py
ui/: app.py
